--- a/templates/1.12.1/nifi.properties.j2
+++ b/templates/1.12.1/nifi.properties.j2
@@ -293,7 +293,8 @@ nifi.kerberos.spnego.authentication.expiration=12 hours
 
 # external properties files for variable registry
 # supports a comma delimited list of file locations
-nifi.variable.registry.properties={{ nifi_variable_registry_properties | join(',') }}
+nifi.variable.registry.properties=
+#nifi.variable.registry.properties={{ nifi_variable_registry_properties | join(',') }}
 
 # analytics properties #
 nifi.analytics.predict.enabled=false
